# treecab

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  requirements.txt
docs/execution/: 260313 OD Select Drawing Engine Spec Card.md
docs/opendoor/: TSVexample.tsv  testtsvprokitchen.tsv
docs/research/: 260313 OD Select Drawing Engine Claude Code Spec.md  260313 OD Select Drawing Engine Research.md
e2e/: editor-workflow.spec.cjs  password-gate.spec.cjs
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.jsx  DeploymentRefreshNotice.jsx  api.js  geometry.js  main.jsx  palette.js  styles.css
od_draw/: __init__.py  config.py  main.py  master_pipeline.py  sample_master_project.py  sample_project.py
od_draw/api/: __init__.py  app.py  master_schemas.py  schemas.py
od_draw/catalog/: __init__.py  kcd_catalog.py  kcd_export.py  master_catalog.py  master_export.py
od_draw/engine/: __init__.py  cabinet_placer.py  dimension_engine.py  geometry_engine.py  room_builder.py
od_draw/models/: __init__.py  annotation.py  appliance.py  cabinet.py  enums.py  geometry.py  master.py  project.py
od_draw/renderer/: drawing_renderer.py  pdf_assembler.py  pdf_linker.py  pdf_renderer.py  styles.py  typst_sheet_composer.py  viewport_renderer.py
scripts/: generate_sample.py  playwright_smoke.cjs
tests/: test_api.py  test_catalog.py  test_master_api.py  test_master_spec.py  test_pdf_pipeline.py  test_viewport_renderer.py  test_workflow.py
(+10 files in other folders)
