[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "od-draw"
version = "0.1.0"
description = "Local OD Select drawing engine MVP"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex" }]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "pydantic>=2.12.0",
]

[project.scripts]
od-draw = "od_draw.main:main"

[tool.setuptools.packages.find]
include = ["od_draw*"]
