[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "od-draw"
version = "0.1.0"
description = "OD Select drawing engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "drawsvg>=2.3.0",
    "pymupdf>=1.24.0",
    "ezdxf>=1.3.0",
    "anthropic>=0.40.0",
    "supabase>=2.9.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.0",
]

[project.scripts]
od-draw = "od_draw.main:main"

[tool.setuptools.packages.find]
include = ["od_draw*"]
